# ELO328

./: CMakeLists.txt  README.md  main.cpp
include/: cmdArgsTools.hpp  imageProcTools.hpp
src/: cmdArgsTools.cpp  imageProcTools.cpp
test/: main.cpp
